--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "concurrently \"npm run start-frontend\" \"npm run start-server\"",
+        "dev": "vite",
         "start-frontend": "vite",
         "start-server": "nodemon ./node-nlp-server/index.js",
         "build": "vite build"
